Style Files renames to test

--- a/test/index.html
+++ b/test/index.html
@@ -6,7 +6,7 @@
 	<title>The Semantic Grid System | Fixed-width Example</title>
 
     <!-- Stylesheets -->
-	<link rel="stylesheet" href="fixed.less" type="text/less" media="screen" />
+	<link rel="stylesheet" href="test.less" type="text/less" media="screen" />
 	<!--link rel="stylesheet" href="fixed.css" type="text/css" media="screen" /-->
 	
     <!-- Scripts -->
@@ -16,7 +16,8 @@
 <body>
 
 	<div class="center">
-		
+		<div class="wrapper">
+
 		<!-- Header -->
 		<header id="top">
 			<h1><a href="http://semantic.gs/">The Semantic Grid System</a></h1>
@@ -30,6 +31,7 @@
 			<h2>Sidebar</h2>
 		</section>
 		
+		</div>
 	</div>
 
 </body>
